# storage/api-docs/api-docs.json
@@ -394,7 +394,7 @@
                     "last_watering": {
                         "description": "The last date the plant was watered",
                         "type": "string",
-                        "format": "date-time",
+                        "format": "date",
                         "example": "2023-04-01T00:00:00Z"
                     },
                     "city": {
@@ -411,6 +411,34 @@
                 "type": "object",
                 "xml": {
                     "name": "UserPlant"
+                }
+            },
+            "Weather": {
+                "title": "Weather",
+                "description": "Weather model",
+                "properties": {
+                    "city": {
+                        "description": "Name of the city",
+                        "type": "string",
+                        "example": "Paris"
+                    },
+                    "precipitations": {
+                        "description": "Daily precipitation amounts",
+                        "type": "object",
+                        "example": {
+                            "2024-07-11": 7.4,
+                            "2024-07-12": 0,
+                            "2024-07-13": 5.4
+                        },
+                        "additionalProperties": {
+                            "type": "number",
+                            "format": "float"
+                        }
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Weather"
                 }
             }
         }
